# SynthInterview

./: .dockerignore  .env  .env.example  .gcloudignore  .gitignore  LICENSE  README.md  agent-interview-implementation.md  cloudbuild.yaml  deploy.sh  docker-compose.yml  firebase.json  package.json  service.yaml  turbo.json
.agents/workflows/: test-interview-flow.md
apps/api/: .env  .env.example  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  test_gemini_isolation.py
apps/api/app/: agent.py  cheat_detector.py  code_runner.py  email_service.py  gemini_client.py  main.py  questions.py  scorecard.py
apps/web/: .gitignore  Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/invite/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/recruiter/: page.tsx
apps/web/app/recruiter/[id]/: page.tsx
apps/web/app/session/: page.tsx
apps/web/components/: AuthGuard.tsx
apps/web/components/interview/: AIAvatar.tsx  EditorPanel.tsx  FeedbackList.tsx  Header.tsx  LanguageSelector.tsx  Overlays.tsx  ProgressFooter.tsx  RightPanel.tsx  ScorecardView.tsx  SessionSkeleton.tsx  SessionView.tsx  Sidebar.tsx  TerminalPanel.tsx  TestCasesPanel.tsx
apps/web/components/landing/: FAQSection.tsx  FeaturesSection.tsx  FinalCTA.tsx  Footer.tsx  HeroOverlay.tsx  Navbar.tsx  ScrollCanvas.tsx  TestimonialsSection.tsx  UseCasesSection.tsx  WorkflowSection.tsx
apps/web/components/seo/: StructuredData.tsx
apps/web/lib/: constants.tsx  firebase.ts  interviewUtils.ts  types.ts  useInterview.ts
apps/web/lib/context/: AuthContext.tsx
apps/web/lib/hooks/: useAudioPlayback.ts  useMedia.ts  useTabMonitoring.ts
apps/web/public/: audio-processor.js  frame-worker.js  robots.txt  site.webmanifest  sitemap.xml
deploy/: DEPLOY-GCP.md  nginx.conf
