[project]
name = "comic-it-api"
version = "0.1.0"
description = "FastAPI orchestrator for Comic It"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "google-cloud-firestore>=2.16.0",
  "google-cloud-storage>=2.17.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
