[project]
name = "synth-interview-api"
version = "0.1.0"
description = "FastAPI orchestrator for SynthInterview"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.1",
  "google-generativeai",
  "google-genai",
  "firebase-admin>=6.0.0",
  "google-cloud-firestore>=2.16.0",
  "google-cloud-storage>=2.17.0",
  "Pillow>=10.0.0",
  "elevenlabs",
  "redis>=5.0.0",
  "weasyprint",
  "aiosmtplib",
  "httpx"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
